# apithing

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
.swissarmyhammer/issues/: start_000001_initialize-cargo-project.md  start_000002_core-trait-definitions.md  start_000003_database-context-pattern.md  start_000004_ergonomic-execute-trait.md  start_000005_api-executor-pattern.md  start_000006_user-api-types-and-props.md  start_000007_create-user-operation.md  start_000008_find-user-operation.md  start_000009_update-user-operation.md  start_000010_product-api-types-and-props.md  start_000011_create-product-operation.md  start_000012_find-product-operation.md  start_000013_comprehensive-unit-tests.md  start_000014_integration-tests.md  start_000015_rustdoc-documentation.md  start_000016_example-applications.md  start_000017_github-actions-ci.md  start_000018_readme-and-final-polish.md
examples/: advanced_patterns.rs  basic_usage.rs  executor_pattern.rs
specification/complete/: start.md
src/: lib.rs
